@@ -6,38 +6,40 @@ import org.springframework.http.*;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Service
 public class IndiaApiService {
 
-    @Value("${indiaapi.key}")
+    @Value("${weatherapi.key}")
     private String apiKey;
+
+    @Value("${weatherapi.url}")
+    private String baseUrl;
 
     private final RestTemplate restTemplate = new RestTemplate();
 
     public List<String> getTamilNaduCities() {
-        String url = "https://api.indiaapi.in/cities?state=Tamil Nadu";
-        HttpHeaders headers = new HttpHeaders();
-        headers.set("Authorization", "Bearer " + apiKey);
-        HttpEntity<Void> request = new HttpEntity<>(headers);
-
-        ResponseEntity<String[]> response = restTemplate.exchange(
-                url, HttpMethod.GET, request, String[].class);
-
-        return Arrays.asList(response.getBody());
+        return List.of("Chennai", "Madurai", "Coimbatore", "Tiruchirappalli", "Salem");
     }
 
     public WeatherData getWeatherForCity(String city) {
-        String url = "https://api.indiaapi.in/weather?city=" + city;
+        String url = baseUrl + "/current?city=" + city;
         HttpHeaders headers = new HttpHeaders();
-        headers.set("Authorization", "Bearer " + apiKey);
+        headers.set("x-api-key", apiKey);
         HttpEntity<Void> request = new HttpEntity<>(headers);
 
-        ResponseEntity<WeatherData> response = restTemplate.exchange(
+        try {
+            ResponseEntity<WeatherData> response = restTemplate.exchange(
                 url, HttpMethod.GET, request, WeatherData.class);
-
-        return response.getBody();
+            return response.getBody();
+        } catch (Exception e) {
+            System.err.println("❌ Weather API call failed: " + e.getMessage());
+            WeatherData fallback = new WeatherData();
+            fallback.setCity(city);
+            fallback.setTemperature("N/A");
+            fallback.setCondition("Unavailable");
+            return fallback;
+        }
     }
 }
